# grex

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: main.rs
tests/: mod.rs
tests/invalid/: bad_xpath.grex  missing_separator.grex
tests/limitations/: cdata.xml  comments.xml  mixed_content.xml
tests/valid/: attrs.grex  attrs.xml  deep_nesting.grex  deep_nesting.xml  empty_elements.grex  empty_elements.xml  many_siblings.grex  many_siblings.xml  pizzeria.grex  pizzeria.xml  simple.grex  simple.xml  special_chars.grex  special_chars.xml  unicode.grex  unicode.xml  whitespace.grex  whitespace.xml
