[package]
name = "grex"
version = "1.0.0"
description = "Flatten XML into a line-oriented, greppable format"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/grex"
repository = "https://github.com/jake-low/grex"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libxml = "0.3"
sigpipe = "0.1"

[dev-dependencies]
assert_cmd = "2.1"
glob = "0.3"
paste = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
